# OptimizationHomework3

./: README.md  main.py  pyproject.toml
