[tool.poetry]
name = "optimizationhomework3"
version = "0.1.0"
description = ""
authors = ["Woolfer0097 <Woolfer0097@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
